# mc-server-finder

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.example.toml
src/: config.rs  discord.rs  logger.rs  main.rs  minecraft.rs  mod.rs  network.rs  scanner.rs  stats.rs
