[package]
name = "Minecraft-Port-Scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.0"
log = { version = "0.4", features = ["release_max_level_info"] }
fern = "0.7"
jiff = "0.2.4"
once_cell = "1.21.1"
tokio = { version = "1", features = ["full"] }
time = "0.3.41"
futures = "0.3"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
maxminddb = "0.24"